# WonderfulPlayer

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/wywonderfulplayer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  BaseChannel.h  CMakeLists.txt  JniCallback.cpp  JniCallback.h  VideoChannel.cpp  VideoChannel.h  WonderfulPlayer.cpp  WonderfulPlayer.h  androidlog.h  com_example_wywonderfulplayer_WonderfulPlayer.h  macro.h  safeQueue.h  wonderful-jni.cpp  wonderfulEnum.h
app/src/main/java/com/example/wywonderfulplayer/: ErrorType.java  MainActivity.java  PlayState.java  PlayType.java  WonderfulPlayer.java
app/src/main/res/layout/: activity_main.xml  spinner_layout.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/wywonderfulplayer/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
